@@ -19,6 +19,7 @@
 #include "perfetto/ext/base/hash.h"
 #include "perfetto/ext/base/optional.h"
 #include "perfetto/ext/base/scoped_file.h"
+#include "perfetto/ext/base/utils.h"
 #include "perfetto/tracing/internal/track_event_internal.h"
 
 #include "protos/perfetto/common/interceptor_descriptor.gen.h"
@@ -51,16 +52,24 @@ namespace {
 int g_output_fd_for_testing;
 
 // Google Turbo colormap.
-constexpr std::array<ConsoleColor, 16> kTurboColors = {
-    ConsoleColor{0x30, 0x12, 0x3b}, ConsoleColor{0x40, 0x40, 0xa1},
-    ConsoleColor{0x46, 0x6b, 0xe3}, ConsoleColor{0x41, 0x93, 0xfe},
-    ConsoleColor{0x28, 0xbb, 0xeb}, ConsoleColor{0x17, 0xdc, 0xc2},
-    ConsoleColor{0x32, 0xf1, 0x97}, ConsoleColor{0x6d, 0xfd, 0x62},
-    ConsoleColor{0xa4, 0xfc, 0x3b}, ConsoleColor{0xcd, 0xeb, 0x34},
-    ConsoleColor{0xed, 0xcf, 0x39}, ConsoleColor{0xfd, 0xab, 0x33},
-    ConsoleColor{0xfa, 0x7d, 0x20}, ConsoleColor{0xea, 0x50, 0x0d},
-    ConsoleColor{0xd0, 0x2f, 0x04}, ConsoleColor{0xa9, 0x15, 0x01},
-};
+constexpr std::array<ConsoleColor, 16> kTurboColors = {{
+    ConsoleColor{0x30, 0x12, 0x3b},
+    ConsoleColor{0x40, 0x40, 0xa1},
+    ConsoleColor{0x46, 0x6b, 0xe3},
+    ConsoleColor{0x41, 0x93, 0xfe},
+    ConsoleColor{0x28, 0xbb, 0xeb},
+    ConsoleColor{0x17, 0xdc, 0xc2},
+    ConsoleColor{0x32, 0xf1, 0x97},
+    ConsoleColor{0x6d, 0xfd, 0x62},
+    ConsoleColor{0xa4, 0xfc, 0x3b},
+    ConsoleColor{0xcd, 0xeb, 0x34},
+    ConsoleColor{0xed, 0xcf, 0x39},
+    ConsoleColor{0xfd, 0xab, 0x33},
+    ConsoleColor{0xfa, 0x7d, 0x20},
+    ConsoleColor{0xea, 0x50, 0x0d},
+    ConsoleColor{0xd0, 0x2f, 0x04},
+    ConsoleColor{0xa9, 0x15, 0x01},
+}};
 
 constexpr size_t kHueBits = 4;
 constexpr uint32_t kMaxHue = kTurboColors.size() << kHueBits;
